--- a/src/_includes/categorySnippet.liquid
+++ b/src/_includes/categorySnippet.liquid
@@ -7,15 +7,13 @@
     {% endif %}
 
     <ul>
-    {% for dish in dishes %}
-        {% if dish.dish_category.id == category.id %}
+    {% for dish in category.dishes %}
         <li>
             <p class="dish--name">{{ dish.name }}</p>
             {% if dish.description %}
             <p class="dish--description">{{ dish.description }}</p>
             {% endif %}
         </li>
-        {% endif %}
     {% endfor %}
     </ul>
 </div>
