--- a/src/_includes/styles.scss
+++ b/src/_includes/styles.scss
@@ -30,6 +30,10 @@ p {
     font-size: 16px;
 }
 
+.dish {
+    margin-bottom: 16px;
+}
+
 .dish--name {
     font-size: 24px;
     font-weight: bold;
