--- a/src/_includes/categorySnippet.liquid
+++ b/src/_includes/categorySnippet.liquid
@@ -8,7 +8,7 @@
 
     <ul>
     {% for dish in category.dishes %}
-        <li>
+        <li class="dish">
             <p class="dish--name">{{ dish.name }}</p>
             {% if dish.description %}
             <p class="dish--description">{{ dish.description }}</p>
