--- a/src/_includes/template.liquid
+++ b/src/_includes/template.liquid
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <style>
